network-policy/my-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-webapp
  labels:
    app: my-webapp
spec:
  containers:
    - name: webapp
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: my-web-service
spec:
  selector:
    app: my-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
