network-policy/nginx-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: my-webapp
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
